force-app/main/default/objects/ABFL_Location_Master__c/ABFL_Location_Master__c.object-meta.xml
<CustomObject>
    <label>ABFL Location Master</label>
    <nameField>
        <displayFormat>LOC-{0000}</displayFormat>
        <label>ABFL Location Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABFL Location Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>