force-app/main/default/objects/ABFL_Location_Master__c/fields/Alternate_SPOC__c.field-meta.xml
<CustomField>
    <fullName>Alternate_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assignment logic for Foreclosure (FC) and Non-FC cases</description>
    <label>Alternate SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ABFL_Location_Masters1</relationshipName>
    <type>Lookup</type>
</CustomField>