force-app/main/default/objects/ABFL_Location_Master__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>