force-app/main/default/objects/ABFL_Location_Master__c/fields/SPOC__c.field-meta.xml
<CustomField>
    <fullName>SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ABFL_Location_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>