force-app/main/default/objects/ABFL_Location_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Location__c</columns>
    <columns>SPOC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>